# drf-blog-api

./: .gitignore  README.md  db.sqlite3  pyproject.toml
blog/: settings.py  urls.py
posts/: permissions.py  serializers.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py
